<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NA.MainView.OptionsFilter">

    <LinearLayout
        android:id="@+id/rarityFilterLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rarityFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rarity" />

            <CheckBox
                android:id="@+id/rarity1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1" />

            <CheckBox
                android:id="@+id/rarity2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2" />

            <CheckBox
                android:id="@+id/rarity3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_3" />

            <CheckBox
                android:id="@+id/rarity4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_4" />

            <CheckBox
                android:id="@+id/rarity5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_5" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/classFilterLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/classFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/servant_class" />

            <LinearLayout
                android:id="@+id/classCheckLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/knightFilterLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/saberFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/saber" />

                    <CheckBox
                        android:id="@+id/archerFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/archer" />

                    <CheckBox
                        android:id="@+id/lancerFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lancer" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cavalryFilterLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/assassinFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/assassin" />

                    <CheckBox
                        android:id="@+id/casterFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/caster" />

                    <CheckBox
                        android:id="@+id/riderFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rider" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/extraFilterLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/rulerFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ruler" />

                    <CheckBox
                        android:id="@+id/avengerFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/avenger" />

                    <CheckBox
                        android:id="@+id/moonCancerFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/moon_cancer" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/specialFilterLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/berserkerFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/berserker" />

                    <CheckBox
                        android:id="@+id/alterEgoFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/alter_ego" />

                    <CheckBox
                        android:id="@+id/foreignerFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/foreigner" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/shielderFilter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shielder" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</FrameLayout>