<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/skillName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/skill_name"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/skillDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:text="@string/skill_description"
                android:textSize="16sp" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableMain">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/skillEffectLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/effect_level" />

            <TextView
                android:id="@+id/skillLevel001"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1" />

            <TextView
                android:id="@+id/skillLevel002"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2" />

            <TextView
                android:id="@+id/skillLevel003"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3" />

            <TextView
                android:id="@+id/skillLevel004"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4" />

            <TextView
                android:id="@+id/skillLevel005"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5" />

            <TextView
                android:id="@+id/skillLevel006"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6" />

            <TextView
                android:id="@+id/skillLevel007"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7" />

            <TextView
                android:id="@+id/skillLevel008"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8" />

            <TextView
                android:id="@+id/skillLevel009"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9" />

            <TextView
                android:id="@+id/skillLevel010"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10" />
        </TableRow>
    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/skillRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLevel" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skillRecyclerView" >

        <TextView
            android:id="@+id/cdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="Cooldown" />

        <TextView
            android:id="@+id/cd1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="TextView" />

        <TextView
            android:id="@+id/cd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="TextView" />

        <TextView
            android:id="@+id/cd3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>